src/main/java/com/example/demo/error/IllegalRoleAssignmentException.java
package com.example.demo.error;

public class IllegalRoleAssignmentException extends Exception {
}
